dxscale/sales/main/objects/OpportunityLineItem/fields/Amount_ACV_Perpetual_License_Value__c.field-meta.xml
<CustomField>
    <fullName>Amount_ACV_Perpetual_License_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Recurring revenue in subscription products, first year price in perpetual licenses. Rolls up to Amount (ACV)</inlineHelpText>
    <label>Amount (ACV) / Perpetual License Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>