dxscale/sales/main/objects/OpportunityLineItem/fields/Maintenance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Amount agreed to pay for a maintenance and support fee on the listed product. Rolls up to the Opportunity field Maintenance and Support.</inlineHelpText>
    <label>Maintenance &amp; Support Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>