dxscale/sales/main/objects/OpportunityLineItem/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Length of term in months. Used for ACV and TCV calculation on Opportunities.</inlineHelpText>
    <label>Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>